updated summarizer to summarize original sentence instead of the shortened fileterd cleaned one

--- a/graph_summarizer/summary.ipynb
+++ b/graph_summarizer/summary.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "19531579-4001-4663-8442-a056cb0b6bc4",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "8a21348b-181d-4042-af20-eb18ffc363ea",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        "\"[The Tragedie of Julius Caesar by William Shakespeare 1599]\\n\\n\\nActus Primus. Scoena Prima.\\n\\nEnter Flauius, Murellus, and certaine Commoners ouer the Stage.\\n\\n  Flauius. Hence: home you idle Creatures, get you home:\\nIs this a Holiday? What, know you not\\n(Being Mechanicall) you ought not walke\\nVpon a labouring day, without the signe\\nOf your Profession? Speake, what Trade art thou?\\n  Car. Why Sir, a Carpenter\\n\\n   Mur. Where is thy Leather Apron, and thy Rule?\\nWhat dost thou with thy best Apparrell on?\\nYou sir, what Trade are you?\\n  Cobl. Truely Sir, in respect of a fine Workman, I am\\nbut as you would say, a Cobler\\n\\n   Mur. But what Trade art thou? Answer me directly\\n\\n   Cob. A Trade Sir, that I hope I may vse, with a safe\\nConscience, which is indeed Sir, a Mender of bad soules\\n\\n   Fla. What Trade thou knaue? Thou naughty knaue,\\nwhat Trade?\\n  Cobl. Nay I beseech you Sir, be not out with me: yet\\nif you be out Sir, I can mend you\\n\\n   Mur. What mean'st thou by that? Mend mee, thou\\nsawcy Fellow?\\n  Cob. Why sir, Cobble you\\n\\n   Fla. Thou art a Cobler, art thou?\\n  Cob. Truly sir, all that I liue by, is with the Aule: I\\nmeddle with no Tradesmans matters, nor womens matters;\\nbut withal I am indeed Sir, a Surgeon to old shooes:\\nwhen they are in great danger, I recouer them. As proper\\nmen as euer trod vpon Neats Leather, haue gone vpon\\nmy handy-worke\\n\\n   Fla. But wherefore art not in thy Shop to day?\\nWhy do'st thou leade these men about the streets?\\n  Cob. Truly sir, to weare out their shooes, to get my\\nselfe into more worke. But indeede sir, we make Holyday\\nto see Caesar, and to reioyce in his Triumph\\n\\n   Mur. Wherefore reioyce?\\nWhat Conquest brings he home?\\nWhat Tributaries follow him to Rome,\\nTo grace in Captiue bonds his Chariot Wheeles?\\nYou Blockes, you stones, you worse then senslesse things:\\nO you hard hearts, you cruell men of Rome,\\nKnew you not Pompey many a time and oft?\\nHaue you climb'd vp to Walles and Battlements,\\nTo Towres and Windowes? Yea, to Chimney tops,\\nYour Infan\""
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,19 +161,23 @@
     "    returns:\n",
     "        This function will return the input text after it's cleaned (the output will be a string)\n",
     "    '''\n",
-    "    text = text.lower()\n",
-    "    article = text.split(' ')\n",
-    "    # clean stopwords\n",
-    "    article = [x.lstrip().rstrip() for x in article if x not in sw]\n",
-    "    article = [x for x in article if x]\n",
-    "    article = ' '.join(article)\n",
+    "    article = text.lower()\n",
     "    \n",
     "    # clean punctuations\n",
     "    for pun in punct:\n",
     "        article = article.replace(pun, '')\n",
     "    \n",
     "    article = article.replace(\"[^a-zA-Z]\", \" \").replace('\\r\\n', ' ').replace('\\n', ' ')\n",
-    "    return article"
+    "    original_text_mapping = {k:v for k,v in enumerate(article.split('. '))}\n",
+    "    \n",
+    "    article = article.split(' ')\n",
+    "    \n",
+    "    # clean stopwords\n",
+    "    article = [x.lstrip().rstrip() for x in article if x not in sw]\n",
+    "    article = [x for x in article if x]\n",
+    "    article = ' '.join(article)\n",
+    "\n",
+    "    return original_text_mapping, article"
    ]
   },
   {
@@ -186,13 +190,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 63.4 ms, sys: 2.07 ms, total: 65.5 ms\n",
-      "Wall time: 64.4 ms\n"
+      "CPU times: user 41.7 ms, sys: 1.03 ms, total: 42.7 ms\n",
+      "Wall time: 42.4 ms\n"
      ]
     }
    ],
    "source": [
-    "%time cleaned_book = clean_text(book)"
+    "%time original_text_mapping, cleaned_book = clean_text(book)"
    ]
   },
   {
@@ -290,8 +294,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 16s, sys: 335 ms, total: 2min 16s\n",
-      "Wall time: 2min 16s\n"
+      "CPU times: user 2min, sys: 295 ms, total: 2min\n",
+      "Wall time: 2min\n"
      ]
     }
    ],
@@ -309,8 +313,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.35 s, sys: 190 ms, total: 2.54 s\n",
-      "Wall time: 2.69 s\n"
+      "CPU times: user 2.42 s, sys: 170 ms, total: 2.59 s\n",
+      "Wall time: 2.75 s\n"
      ]
     }
    ],
@@ -333,8 +337,8 @@
       "Name: \n",
       "Type: Graph\n",
       "Number of nodes: 1289\n",
-      "Number of edges: 820222\n",
-      "Average degree: 1272.6486\n"
+      "Number of edges: 818195\n",
+      "Average degree: 1269.5035\n"
      ]
     }
    ],
@@ -352,8 +356,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.1 s, sys: 955 ms, total: 11.1 s\n",
-      "Wall time: 11.8 s\n"
+      "CPU times: user 10.2 s, sys: 899 ms, total: 11.1 s\n",
+      "Wall time: 11.9 s\n"
      ]
     }
    ],
@@ -373,36 +377,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "cdabb3ec-467b-435b-ae65-e12a7547b7e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "ranked_sentences = [\n",
-    "    (sentences[sent], rank) for sent,rank in sorted(pr_sentence_similarity.items(), key=lambda item: item[1], reverse = True)\n",
+    "    (original_text_mapping[sent], rank) for sent,rank in sorted(pr_sentence_similarity.items(), key=lambda item: item[1], reverse = True)\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "56789e21-29b1-4196-b780-5dce5adab828",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('decius well vrgd thinke meet marke antony well beloud caesar should outliue caesar shall finde him a shrewd contriuer',\n",
-       " 0.0008514421863851916)"
+       "\"the taper burneth in your closet sir searching the window for a flint i found this paper thus seal'd vp and i am sure it did not lye there when i went to bed\""
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ranked_sentences[0]"
+    "ranked_sentences[0][0]"
    ]
   },
   {
@@ -415,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "c6091b8e-b5c9-4cf3-8c76-1c98bb40ab63",
    "metadata": {},
    "outputs": [],
@@ -442,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "4c6f66fe-d0d5-4ed4-b1ac-3da7a0fe5252",
    "metadata": {},
    "outputs": [
@@ -450,8 +453,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22 µs, sys: 69 µs, total: 91 µs\n",
-      "Wall time: 94.9 µs\n"
+      "CPU times: user 8 µs, sys: 0 ns, total: 8 µs\n",
+      "Wall time: 8.82 µs\n"
      ]
     }
    ],
@@ -463,17 +466,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "35438318-c8d1-418f-afe4-2ab777ae12b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'decius well vrgd thinke meet marke antony well beloud caesar should outliue caesar shall finde him a shrewd contriuer. taper burneth closet sir searching window flint found this paper thus seald vp sure it lye went bed. these as sure do beare fire enough to kindle cowards steele valour the melting spirits women. but compact meane haue vs will prickd number friends or shall on depend you ant. man doth bestride narrow world like colossus petty men walke vnder huge legges peepe about to finde selues dishonourable graues. deepe night crept vpon talke and nature must obey necessitie which niggard little rest there say cassi. noble brutus hath told caesar ambitious if so greeuous fault and greeuously hath caesar answerd it. forget speed antonio to touch calphurnia elders say the barren touched holy chace shake sterrile curse ant. i itching palme you know brutus speakes this or gods speech else last bru. o cassius yoaked lambe that carries anger flint beares fire who much inforced shewes hastie sparke and straite cold agen cassi. receiue letters comming and bid say word mouth o caesar ant. so fare well once brutus tongue hath almost ended liues history night hangs vpon mine eyes bones would rest that haue labourd attaine houre. titinius enclosed round about with horsemen make spurre yet spurres on. this day breathed first time come round and begin shall end my life run compasse. courtesie respect enough but familiar instances nor free friendly conference as hath vsd old bru. haue wrongd me doth appear this you haue condemnd noted lucius pella for taking bribes heere sardians wherein letters praying side because knew man slighted off bru. no sir hats pluckt eares and halfe faces buried cloakes that meanes may discouer them by marke fauour brut. must death part i know personall cause spurne him but generall. matter let images be hung caesars trophees ile about and driue away vulgar streets so too perceiue thicke. if then friend demand brutus rose caesar this answer loud caesar lesse but that loud rome more. common slaue know well sight held vp left hand flame burne like twentie torches ioynd yet hand not sensible fire remaind vnscorchd. gamesom lacke part of quicke spirit antony let hinder cassius desires ile leaue you cassi. there tide affayres men which taken flood leades fortune omitted voyage life is bound shallowes miseries. come therefore tharsus send body his funerals shall campe least discomfort vs. passe by plucke caska sleeue and after sowre fashion tell you what hath proceeded worthy note day bru'"
+       "\"the taper burneth in your closet sir searching the window for a flint i found this paper thus seal'd vp and i am sure it did not lye there when i went to bed. forget not in your speed antonio to touch calphurnia for our elders say the barren touched in this holy chace shake off their sterrile curse     ant. decius well vrg'd i thinke it is not meet marke antony so well belou'd of caesar should outliue caesar we shall finde of him a shrew'd contriuer. this day i breathed first time is come round and where i did begin there shall i end my life is run his compasse. post backe with speede and tell him what hath chanc'd heere is a mourning rome a dangerous rome no rome of safety for octauius yet hie hence and tell him so. publius good cheere there is no harme intended to your person nor to no roman else so tell them publius     cassi. these growing feathers pluckt from caesars wing will make him flye an ordinary pitch who else would soare aboue the view of men and keepe vs all in seruile fearefulnesse. why man he doth bestride the narrow world like a colossus and we petty men walke vnder his huge legges and peepe about to finde our selues dishonourable graues. gentlemen all alas what shall i say my credit now stands on such slippery ground that one of two bad wayes you must conceit me either a coward or a flatterer. but if these as i am sure they do beare fire enough to kindle cowards and to steele with valour the melting spirits of women. i an itching palme? you know that you are brutus that speakes this or by the gods this speech were else your last     bru. the deepe of night is crept vpon our talke and nature must obey necessitie which we will niggard with a little rest there is no more to say     cassi. the noble brutus hath told you caesar was ambitious if it were so it was a greeuous fault and greeuously hath caesar answer'd it. i am not gamesom i do lacke some part of that quicke spirit that is in antony let me not hinder cassius your desires ile leaue you     cassi. there is but one minde in all these men and it is bent against caesar if thou beest not immortall looke about you security giues way to conspiracie. come therefore and to tharsus send his body his funerals shall not be in our campe least it discomfort vs. in your bad strokes brutus you giue good words witnesse the hole you made in caesars heart crying long liue haile caesar     cassi. what priuate greefes they haue alas i know not that made them do it they are wise and honourable and will no doubt with reasons answer you. that you haue wrong'd me doth appear in this you haue condemn'd and noted lucius pella for taking bribes heere of the sardians wherein my letters praying on his side because i knew the man was slighted off     bru. but wherefore did you so much tempt the heauens? it is the part of men to feare and tremble when the most mightie gods by tokens send such dreadfull heraulds to astonish vs     cassi. he did receiue his letters and is comming and bid me say to you by word of mouth o caesar   ant. tut i am in their bosomes and i know wherefore they do it they could be content to visit other places and come downe with fearefull brauery thinking by this face to fasten in our thoughts that they haue courage but 'tis not so. caius ligarius doth beare caesar hard who rated him for speaking well of pompey i wonder none of you haue thought of him     bru. what watchfull cares doe interpose themselues betwixt your eyes and night?   cass. prythee listen well i heard a bussling rumor like a fray and the winde brings it from the capitoll     luc\""
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
