updated summarizer to summarize original sentence instead of the shortened fileterd cleaned one

--- a/graph_summarizer/summary.ipynb
+++ b/graph_summarizer/summary.ipynb
@@ -159,7 +159,8 @@
     "        punct (List) : The slist of punctuations you wish to remove from the input text\n",
     "        \n",
     "    returns:\n",
-    "        This function will return the input text after it's cleaned (the output will be a string)\n",
+    "        This function will return the input text after it's cleaned (the output will be a string) and \n",
+    "        a dictionary mapping of the original sentences with its index\n",
     "    '''\n",
     "    article = text.lower()\n",
     "    \n",
