--- a/node_classification/classify_node.ipynb
+++ b/node_classification/classify_node.ipynb
@@ -194,11 +194,147 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "545f3ba4-b3dc-4f35-acde-c843511d0cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>date</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>main_topic</th>\n",
+       "      <th>all_topics</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XAutoML: A Visual Analytics Tool for Establish...</td>\n",
+       "      <td>2022-02-24 08:18:25+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.11954v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG, cs.AI, cs.HC, I.2]</td>\n",
+       "      <td>[Marc-André Zöller, Waldemar Titov, Thomas Sch...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AutoCl : A Visual Interactive System for Autom...</td>\n",
+       "      <td>2022-02-24 07:02:37+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.11928v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG]</td>\n",
+       "      <td>[Fuad Ahmed, Rubayea Ferdows, Md Rafiqul Islam...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mining Robust Default Configurations for Resou...</td>\n",
+       "      <td>2022-02-20 23:08:04+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.09927v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG]</td>\n",
+       "      <td>[Moe Kayali, Chi Wang]</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SapientML: Synthesizing Machine Learning Pipel...</td>\n",
+       "      <td>2022-02-18 20:45:47+00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.10451v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG, cs.AI, cs.SE]</td>\n",
+       "      <td>[Ripon K. Saha, Akira Ura, Sonal Mahajan, Chen...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Review of automated time series forecasting pi...</td>\n",
+       "      <td>2022-02-03 17:26:27+00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.01712v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG]</td>\n",
+       "      <td>[Stefan Meisenbacher, Marian Turowski, Kaleb P...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  XAutoML: A Visual Analytics Tool for Establish...   \n",
+       "1  AutoCl : A Visual Interactive System for Autom...   \n",
+       "2  Mining Robust Default Configurations for Resou...   \n",
+       "3  SapientML: Synthesizing Machine Learning Pipel...   \n",
+       "4  Review of automated time series forecasting pi...   \n",
+       "\n",
+       "                       date  article_id                                url  \\\n",
+       "0 2022-02-24 08:18:25+00:00           0  http://arxiv.org/pdf/2202.11954v1   \n",
+       "1 2022-02-24 07:02:37+00:00           1  http://arxiv.org/pdf/2202.11928v1   \n",
+       "2 2022-02-20 23:08:04+00:00           2  http://arxiv.org/pdf/2202.09927v1   \n",
+       "3 2022-02-18 20:45:47+00:00           3  http://arxiv.org/pdf/2202.10451v1   \n",
+       "4 2022-02-03 17:26:27+00:00           4  http://arxiv.org/pdf/2202.01712v1   \n",
+       "\n",
+       "  main_topic                  all_topics  \\\n",
+       "0      cs.LG  [cs.LG, cs.AI, cs.HC, I.2]   \n",
+       "1      cs.LG                     [cs.LG]   \n",
+       "2      cs.LG                     [cs.LG]   \n",
+       "3      cs.LG       [cs.LG, cs.AI, cs.SE]   \n",
+       "4      cs.LG                     [cs.LG]   \n",
+       "\n",
+       "                                             authors  year  \n",
+       "0  [Marc-André Zöller, Waldemar Titov, Thomas Sch...  2022  \n",
+       "1  [Fuad Ahmed, Rubayea Ferdows, Md Rafiqul Islam...  2022  \n",
+       "2                             [Moe Kayali, Chi Wang]  2022  \n",
+       "3  [Ripon K. Saha, Akira Ura, Sonal Mahajan, Chen...  2022  \n",
+       "4  [Stefan Meisenbacher, Marian Turowski, Kaleb P...  2022  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "research_df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a98d9f4e-3e3f-4f80-9049-ca44751005bb",
    "metadata": {},
    "source": [
-    "If you're having trouble querying the data, for reproducibility purposes, the CSV I used for the analysis conducted in this article was uploaded to my GitHub which you can find here. https://github.com/vatsal220/medium_articles/blob/main/link_prediction/data/arxiv_data.csv"
+    "If you're having trouble querying the data, for reproducibility purposes, the CSV I used for the analysis conducted in this article was uploaded to my GitHub which you can find here. https://github.com/vatsal220/medium_articles/blob/main/node_classification/data/arxiv_data.csv"
    ]
   },
   {
@@ -410,8 +546,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "63a54708-bc49-4079-9683-fab39fa704a2",
+   "execution_count": 13,
+   "id": "5fbe5920-52f9-4895-8b92-02a6a90590aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emb_df = emb_df.merge(\n",
+    "    research_df[['article_id', 'main_topic']].set_index('article_id'),\n",
+    "    left_index = True,\n",
+    "    right_index = True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "16f0d145-b10b-4074-9d0e-55896f721ac4",
    "metadata": {},
    "outputs": [
     {
@@ -451,6 +601,7 @@
        "      <th>13</th>\n",
        "      <th>14</th>\n",
        "      <th>15</th>\n",
+       "      <th>main_topic</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -472,6 +623,7 @@
        "      <td>-0.055955</td>\n",
        "      <td>-0.018547</td>\n",
        "      <td>1.452183</td>\n",
+       "      <td>cs.LG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -491,6 +643,7 @@
        "      <td>-0.133567</td>\n",
        "      <td>-0.039257</td>\n",
        "      <td>1.416739</td>\n",
+       "      <td>cs.LG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -510,6 +663,7 @@
        "      <td>-0.155309</td>\n",
        "      <td>-0.049878</td>\n",
        "      <td>1.412636</td>\n",
+       "      <td>cs.LG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -529,6 +683,7 @@
        "      <td>-0.155646</td>\n",
        "      <td>0.006648</td>\n",
        "      <td>1.400579</td>\n",
+       "      <td>cs.LG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -548,35 +703,36 @@
        "      <td>-0.159935</td>\n",
        "      <td>-0.001556</td>\n",
        "      <td>1.427669</td>\n",
+       "      <td>cs.LG</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         0         1         2         3         4         5         6   \\\n",
+       "          0         1         2         3         4         5         6  \\\n",
        "0  0.982184 -0.418723  0.648704  0.777569  1.278544 -0.682070 -0.140218   \n",
        "1  1.009432 -0.445544  0.703062  0.828961  1.277971 -0.544692 -0.077958   \n",
        "2  0.964131 -0.389936  0.690117  0.866124  1.258624 -0.660620 -0.128217   \n",
        "3  0.948457 -0.382216  0.711337  0.833575  1.244138 -0.752523 -0.095578   \n",
        "4  0.910574 -0.306636  0.748167  0.808214  1.259955 -0.739075 -0.202448   \n",
        "\n",
-       "         7         8         9         10        11        12        13  \\\n",
+       "          7         8         9        10        11        12        13  \\\n",
        "0 -0.352046 -0.154250 -0.430749  0.095327  0.495061  0.123365 -0.055955   \n",
        "1 -0.374260 -0.158336 -0.590008  0.082956  0.530169  0.090699 -0.133567   \n",
        "2 -0.401386 -0.151005 -0.549149  0.070321  0.506534  0.066263 -0.155309   \n",
        "3 -0.392389 -0.137476 -0.570683  0.031246  0.557270  0.073654 -0.155646   \n",
        "4 -0.436149 -0.051608 -0.510787 -0.043116  0.593685  0.033465 -0.159935   \n",
        "\n",
-       "         14        15  \n",
-       "0 -0.018547  1.452183  \n",
-       "1 -0.039257  1.416739  \n",
-       "2 -0.049878  1.412636  \n",
-       "3  0.006648  1.400579  \n",
-       "4 -0.001556  1.427669  "
+       "         14        15 main_topic  \n",
+       "0 -0.018547  1.452183      cs.LG  \n",
+       "1 -0.039257  1.416739      cs.LG  \n",
+       "2 -0.049878  1.412636      cs.LG  \n",
+       "3  0.006648  1.400579      cs.LG  \n",
+       "4 -0.001556  1.427669      cs.LG  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,16 +743,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5fbe5920-52f9-4895-8b92-02a6a90590aa",
+   "execution_count": 27,
+   "id": "6ed682cd-29c7-40a5-b726-1cf9f2ed0985",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cs.LG       302\n",
+       "cs.CL       204\n",
+       "cs.CV       131\n",
+       "cs.RO        41\n",
+       "math-ph      37\n",
+       "quant-ph     36\n",
+       "eess.IV      33\n",
+       "math.AP      32\n",
+       "cs.CR        24\n",
+       "cs.AI        22\n",
+       "Name: main_topic, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "emb_df = emb_df.merge(\n",
-    "    research_df[['article_id', 'main_topic']].set_index('article_id'),\n",
-    "    left_index = True,\n",
-    "    right_index = True\n",
-    ")"
+    "emb_df.main_topic.value_counts().head(10)"
    ]
   },
   {
