--- a/levenshtein_distance/lev_dist.ipynb
+++ b/levenshtein_distance/lev_dist.ipynb
@@ -9,12 +9,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02846d60-7071-4e0c-823f-1dcc8e7f7325",
+   "metadata": {},
+   "source": [
+    "```console\n",
+    "pip install python-Levenshtein\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e6fafd7f-d70b-4d83-a60f-b21642f81302",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -33,12 +45,37 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02dbd1f9-ac63-460f-90f8-b1983eb72884",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04bfbb09-954c-4933-8d3b-3a53e903dc11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b3cade5-2deb-40a1-abbe-b3738681f6fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "304f0779-9ace-4d44-840e-aa618b0984c7",
    "metadata": {},
    "source": [
     "## Resources\n",
-    "\n",
+    "- [1]\n",
+    "- [2] https://pypi.org/project/python-Levenshtein/\n",
     "---"
    ]
   }
