added function to implement lev  distance dynamically

--- a/levenshtein_distance/lev_dist.ipynb
+++ b/levenshtein_distance/lev_dist.ipynb
@@ -13,25 +13,108 @@
    "id": "02846d60-7071-4e0c-823f-1dcc8e7f7325",
    "metadata": {},
    "source": [
+    "For the purposes of this tutorial I will show you the code necessary to implement Levenshtein distance in Python but for the actual text similarity pipeline we will be using the Levenshtein-python package. You can look through the installation guidelines [here](https://pypi.org/project/python-Levenshtein/) or run the following command:   \n",
     "```console\n",
-    "pip install python-Levenshtein\n",
-    "```"
+    "pip install python-Levenshtein  \n",
+    "```  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e6fafd7f-d70b-4d83-a60f-b21642f81302",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n"
+    "import re\n",
+    "import numpy as np\n",
+    "import Levenshtein as lev\n",
+    "\n",
+    "from functools import lru_cache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "972abcdb-3cff-4c0c-91ea-382129c6a7f8",
+   "metadata": {},
+   "source": [
+    "## Implement Levenshtein Distance\n",
+    "\n",
+    "The Python code associated to implementing  Levenshtein distance using dynamic programming. The same code can be implemented through a brute force and iterative solution (be aware that the brute force solution would not be optimal in terms of time complexity).  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c089fd80-7219-4cf1-8d89-840e50117d28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lev_dist(a, b):\n",
+    "    '''\n",
+    "    This function will calculate the levenshtein distance between two input\n",
+    "    strings a and b\n",
+    "    \n",
+    "    params:\n",
+    "        a (String) : The first string you want to compare\n",
+    "        b (String) : The second string you want to compare\n",
+    "        \n",
+    "    returns:\n",
+    "        This function will return the distnace between string a and b.\n",
+    "        \n",
+    "    example:\n",
+    "        a = 'stamp'\n",
+    "        b = 'stomp'\n",
+    "        lev_dist(a,b)\n",
+    "        >> 1.0\n",
+    "    '''\n",
+    "    \n",
+    "    @lru_cache(None)  # for memorization\n",
+    "    def min_dist(s1, s2):\n",
+    "\n",
+    "        if s1 == len(a) or s2 == len(b):\n",
+    "            return len(a) - s1 + len(b) - s2\n",
+    "\n",
+    "        # no change required\n",
+    "        if a[s1] == b[s2]:\n",
+    "            return min_dist(s1 + 1, s2 + 1)\n",
+    "\n",
+    "        return 1 + min(\n",
+    "            min_dist(s1, s2 + 1),      # insert character\n",
+    "            min_dist(s1 + 1, s2),      # delete character\n",
+    "            min_dist(s1 + 1, s2 + 1),  # replace character\n",
+    "        )\n",
+    "\n",
+    "    return min_dist(0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f77a4ab3-4c63-4ed4-9caf-d8e9727ed613",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sq1 = 'saturday'\n",
+    "sq2 = 'sunday'\n",
+    "lev_dist(sq1, sq2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51f48227-cfb4-4562-9533-be65c0d773c0",
+   "id": "b215d292-2dbf-436e-89ee-c81b74523ffb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -39,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b7f219f-848a-40ad-b4ea-38a1348f66f1",
+   "id": "eaafcfcf-e198-41b1-8da0-beea126af6b2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -47,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02dbd1f9-ac63-460f-90f8-b1983eb72884",
+   "id": "c04bbe3d-fa41-4b8a-819c-c345f4801108",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -55,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04bfbb09-954c-4933-8d3b-3a53e903dc11",
+   "id": "c606f2d9-2b5f-4a3d-b77b-6a97db153c08",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -63,7 +146,94 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b3cade5-2deb-40a1-abbe-b3738681f6fe",
+   "id": "bb7272f3-eb49-4148-9f78-30dfaf6aa273",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "83373e80-1a49-4b23-b45d-a614c6b545b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def levenshtein(seq1, seq2):\n",
+    "    size_x = len(seq1) + 1\n",
+    "    size_y = len(seq2) + 1\n",
+    "    matrix = np.zeros ((size_x, size_y))\n",
+    "    for x in range(size_x):\n",
+    "        matrix [x, 0] = x\n",
+    "    for y in range(size_y):\n",
+    "        matrix [0, y] = y\n",
+    "\n",
+    "    for x in range(1, size_x):\n",
+    "        for y in range(1, size_y):\n",
+    "            if seq1[x-1] == seq2[y-1]:\n",
+    "                matrix [x,y] = min(\n",
+    "                    matrix[x-1, y] + 1,\n",
+    "                    matrix[x-1, y-1],\n",
+    "                    matrix[x, y-1] + 1\n",
+    "                )\n",
+    "            else:\n",
+    "                matrix [x,y] = min(\n",
+    "                    matrix[x-1,y] + 1,\n",
+    "                    matrix[x-1,y-1] + 1,\n",
+    "                    matrix[x,y-1] + 1\n",
+    "                )\n",
+    "    print (matrix)\n",
+    "    return (matrix[size_x - 1, size_y - 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "55646374-dee9-4385-aae9-368d9193328e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 2. 3. 4. 5.]\n",
+      " [1. 0. 1. 2. 3. 4.]\n",
+      " [2. 1. 0. 1. 2. 3.]\n",
+      " [3. 2. 1. 1. 2. 3.]\n",
+      " [4. 3. 2. 2. 1. 2.]\n",
+      " [5. 4. 3. 3. 2. 1.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 'stamp'\n",
+    "b = 'stomp'\n",
+    "levenshtein(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3ea3ff6-e4d5-41b3-a5f8-c1463d30d13c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd3f944c-6162-4096-9a3f-126ad73c1eef",
    "metadata": {},
    "outputs": [],
    "source": []
