--- a/levenshtein_distance/lev_dist.ipynb
+++ b/levenshtein_distance/lev_dist.ipynb
@@ -16,26 +16,29 @@
     "For the purposes of this tutorial I will show you the code necessary to implement Levenshtein distance in Python but for the actual text similarity pipeline we will be using the Levenshtein-python package. You can look through the installation guidelines [here](https://pypi.org/project/python-Levenshtein/) or run the following command:   \n",
     "```console\n",
     "pip install python-Levenshtein  \n",
-    "```  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "e6fafd7f-d70b-4d83-a60f-b21642f81302",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "import numpy as np\n",
-    "import Levenshtein as lev\n",
+    "```  \n",
     "\n",
-    "from functools import lru_cache"
+    "### Introduction to Text Similarity\n",
+    "Identifying similarity between text is a common problem in NLP and is used by many companies world wide. The most common application of text similarity comes from the form of identifying plagiarized text. Educational facilities ranging from elementary school, high school, college and universities all around the world use services like Turnitin to ensure the work submitted by students is original and their own.  \n",
+    "\n",
+    "Text similarity can be broken down into two components, semantic similarity and lexical similarity. Given a pair of text, the semantic similarity of the pair refers to how close the documents are in meaning. Whereas, lexical similarity is a measure of overlap in vocabulary. If both documents in the pairs have the same vocabularies, then they would have a lexical similarity of 1 and vice versa of 0 if there was no overlap in vocabularies [2].    \n",
+    "\n",
+    "Achieving true semantic similarity is a very difficult and unsolved task in both NLP and Mathematics. It's a heavily researched area and a lot of the solutions proposed does involve a certain degree of lexical similarity in them. For the focuses of this article, I will not dive much deeper into semantic similarity, but focus a lot more on lexical similarity.  \n",
+    "\n",
+    "### Levenshtein Distance  \n",
+    "There are many ways to identify the lexical similarities between a pair of text, the one which we'll be covering today in this article is Levenshtein distance. An algorithm invented in 1965 by Vladimir Levenshtein, a Soviet mathematician [1].  \n",
+    "### Intuition  \n",
+    ">Levenshtein distance is very impactful because it does not require two strings to be of equal length for them to be compared. >Intuitively speaking, Levenshtein distance is quite easy to understand.  \n",
+    ">Informally, the Levenshtein distance between two words is the minimum number of single-character edits (insertions, deletions or substitutions) required to change one word into the other. [1]  \n",
+    ">- https://en.wikipedia.org/wiki/Levenshtein_distance  \n",
+    "\n",
+    "Essentially implying that the output distance between the two is the cumulative sum of the single-character edits. The larger the output distance is implies that more changes were necessary to make the two words equal each other, and the lower the output distance is implies that fewer changes were necessary. For example, given a pair of words dream and dream the resulting Levenshtein distance would be 0 because the two words are the same. However, if the words were dream and steam the Levenshtein distance would be 2 as you would need to make 2 edits to change dr to st .\n",
+    "Thus a large value for Levenshtein distance implies that the two documents were not similar, and a small value for the distance implies that the two documents were similar."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "972abcdb-3cff-4c0c-91ea-382129c6a7f8",
+   "id": "976c8181-eedd-47a0-a876-926994fa774a",
    "metadata": {},
    "source": [
     "## Implement Levenshtein Distance\n",
@@ -45,8 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c089fd80-7219-4cf1-8d89-840e50117d28",
+   "execution_count": 1,
+   "id": "a1334183-ab3d-4955-815f-f95e3ac2d47d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import lru_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1d4c6ce4-f174-49e8-8d73-523120815eb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f77a4ab3-4c63-4ed4-9caf-d8e9727ed613",
+   "execution_count": 3,
+   "id": "89178ab5-29a7-4dab-b66f-b0daae1c1131",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +113,7 @@
        "3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,9 +125,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a665cad9-5979-4695-b2c5-2fbcf8a5e0df",
+   "metadata": {},
+   "source": [
+    "## Text Similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4ccbc07b-eff4-496e-bb2c-5d4c64044832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import numpy as np\n",
+    "import Levenshtein as lev"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02bc0123-f206-4c44-9579-56e488eb7f90",
+   "metadata": {},
+   "source": [
+    "### Problem Statement \n",
+    "Similar to softwares like Turnitin, we want to build a pipeline which identifies if an input article is plagiarized.   \n",
+    "\n",
+    "### Solution Architecture\n",
+    "To solve this problem we're going to make a large initial assumption. The assumption is that we have a large corpus of labelled documents which we want to cross reference with this particular user input document. We can then clean the user input document for redundancies like stopwords and punctuations to better optimize the calculation of Levenshtein distance. We pass this cleaned document through each document in our corpus under the same tag as the user input document and identify if there is any document which is very similar to the user submitted document.   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b79f7309-75fa-418b-9b64-d3fa3ef12069",
+   "metadata": {},
+   "source": [
+    "## Fetch Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b215d292-2dbf-436e-89ee-c81b74523ffb",
+   "id": "547ade18-9f22-47e9-8df9-702f9b5ba7db",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -126,6 +179,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88fc79f7-f84f-4714-9776-0bd6a763e125",
+   "metadata": {},
+   "source": [
+    "## Clean Data"
+   ]
   },
   {
    "cell_type": "code",
@@ -144,17 +205,56 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "bb2de531-35d2-4647-ad92-0c85b3061ff3",
+   "metadata": {},
+   "source": [
+    "## Find Similarity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb7272f3-eb49-4148-9f78-30dfaf6aa273",
+   "id": "b3ea3ff6-e4d5-41b3-a5f8-c1463d30d13c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "fd3f944c-6162-4096-9a3f-126ad73c1eef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2759bb01-849d-422d-b57d-1b198150571e",
+   "metadata": {},
+   "source": [
+    "## Concluding Remarks\n",
+    "Levenshtein distance is a lexical similarity measure which identifies the distance between one a pair of strings. It does so by counting the number of times you would have to insert, delete or substitute a character from string 1 to make it like string 2. The larger the distance between the pair implies that the strings are not similar to each other and vice versa.  \n",
+    "I created this pipeline in a manner such that its easily integratabtle with other text similarity measures. Levenshtein distance is a great measure to use to identify lexical similarity between a pair of text, but it does not mean there aren't other well performing similarity measures. The Jaro-Winkler score in particular comes to mind and can be easily implemented in this pipeline. Be aware that the Jaro similarity outputs a result which is interpreted differently than the Levenshtein distance.  \n",
+    "You can follow through with this pipeline in the Jupyter Notebook I created for this project. You can find the notebook on my GitHub page [here](https://github.com/vatsal220/medium_articles/blob/main/levenshtein_distance/lev_dist.ipynb).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "304f0779-9ace-4d44-840e-aa618b0984c7",
+   "metadata": {},
+   "source": [
+    "## Resources\n",
+    "- [1] https://en.wikipedia.org/wiki/Levenshtein_distance\n",
+    "- [2] https://en.wikipedia.org/wiki/Lexical_similarity\n",
+    "- [3] https://pypi.org/project/python-Levenshtein/\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
-   "id": "83373e80-1a49-4b23-b45d-a614c6b545b8",
+   "id": "67d24198-e1a1-41ad-8ee5-90ecd8c19fa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "55646374-dee9-4385-aae9-368d9193328e",
+   "id": "7f695420-e02f-4763-a98a-a271b0415947",
    "metadata": {},
    "outputs": [
     {
@@ -220,33 +320,6 @@
     "a = 'stamp'\n",
     "b = 'stomp'\n",
     "levenshtein(a,b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3ea3ff6-e4d5-41b3-a5f8-c1463d30d13c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd3f944c-6162-4096-9a3f-126ad73c1eef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "304f0779-9ace-4d44-840e-aa618b0984c7",
-   "metadata": {},
-   "source": [
-    "## Resources\n",
-    "- [1]\n",
-    "- [2] https://pypi.org/project/python-Levenshtein/\n",
-    "---"
    ]
   }
  ],
